--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "redux": "^4.2.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.0.23"
   }
 }
